# anillo-os

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CMakeLists.txt  Cargo.toml  Dockerfile  Doxyfile  Jenkinsfile  Makefile.toml  README.md  rustfmt.toml
bootstrap/uefi/: CMakeLists.txt  main.c  wrappers.c
bootstrap/uefi/libmacho/: CMakeLists.txt
conman/: CMakeLists.txt
conman/resources/: org.anillo.conman.json5
conman/src/: conman.c
displayman/: CMakeLists.txt
displayman/resources/: org.anillo.displayman.json5
displayman/src/: displayman.c
dylink/: CMakeLists.txt  README.md
dylink/src/: dylink.c
dymple/: CMakeLists.txt  README.md
dymple/include/dymple/: base.h  dymple.h  images.h  resolution.h
dymple/private-include/dymple/: api.private.h  dymple.private.h  images.private.h  leb128.h  log.h  relocations.h  resolution.private.h  util.h
dymple/src/loader/: api.c  dymple.c  images.c  log.c  relocations.c  resolution.c
dymple/src/stub/: stubs.S
hidman/: CMakeLists.txt
hidman/resources/: org.anillo.hidman.json5
kernel/: CMakeLists.txt  README.md
kernel/breathe-docs/: Makefile  base.rst  bits.rst  conf.py  elf.rst  error.rst  index.aarch64.rst  index.x86_64.rst  platform.rst  ramdisk.rst
kernel/breathe-docs/core/: acpi.rst  console.rst  cpu.rst  framebuffer.rst  index.aarch64.rst  index.x86_64.rst  interrupts.rst  kernel-entry.rst  locks.rst  mempool.rst  paging.rst  panic.rst  scheduler.rst  threads.rst  timers.rst  waitq.rst  workers.rst
kernel/docsrc/: main-page.md
kernel/doxy-docs/: Doxyfile.aarch64.private  Doxyfile.aarch64.public  Doxyfile.x86_64.private  Doxyfile.x86_64.public  Makefile
kernel/include/ferro/: api.h  base.h  bits.h  byteswap.h  elf.h  error.h  platform.h  ramdisk.h
kernel/include/libk/: libk.h
kernel/kernel-include/ferro/: elf.h  kasan.h
kernel/resources/: Lat15-TerminusBold32x16.psf
kernel/scripts/: calculate-offsets.py  compile.sh  encode-file.py  generate.sh  kernel.lds  process-font.py
kernel/scripts/aarch64/: kernel.lds
kernel/scripts/resources/: offsets.c
kernel/src/: testing.c
kernel/src/core/: CMakeLists.txt  acpi.c  channels.c  config.c  console.c  cpu.c  entry.c  framebuffer.c  ghmap.c  mempool.c  paging.c  panic.c  per-cpu.c  ramdisk.c  scheduler.c  threads.c  timers.c  vfs.c  waitq.c  workers.c
kernel/src/drivers/: CMakeLists.txt  init.c  keyboard.c  mouse.c  pci.c
kernel/src/gdbstub/: CMakeLists.txt  main.c  malloc.c  packet-buffer.c
kernel/src/kasan/: CMakeLists.txt  kasan.c
kernel/src/libk/: libk.c
kernel/src/mm/: CMakeLists.txt  mempool.c  paging.c  pmm.c  slab.c  vmm.c
kernel/src/syscalls/: CMakeLists.txt  channels.c  constants.c  exit.c  fd_close.c  fd_copy_path.c  fd_list_children.c  fd_open.c  fd_open_special.c  fd_read.c  fd_write.c  futex_associate.c  futex_wait.c  futex_wake.c  log.c  monitors.c  page_allocate.c  page_allocate_any.c  page_free.c  page_protect.c  page_shared.c  page_translate.c  process_create.c  process_id.c  process_kill.c  process_resume.c  process_suspend.c  syscall-table.c  thread_create.c  thread_id.c  thread_kill.c  thread_misc.c  thread_resume.c  thread_signal.c  thread_signal_configure.c  thread_suspend.c
kernel/src/ubsan/: CMakeLists.txt  ubsan.c
kernel/src/userspace/: CMakeLists.txt  entry.c  futex.c  loader.c  process-registry.c  processes.c  threads.c  uio.c
libc/: CMakeLists.txt  aliased-symbols.txt  reexported-symbols.txt
libc/include/: stdio.h  stdlib.h  string.h
libc/include/libc/: base.h
libc/src/: stdio.c  stdlib.c  string.c
libelf/: CMakeLists.txt
libelf/include/libelf/: base.h  libelf.h
libelf/src/: main.c
libeve/: CMakeLists.txt
libeve/include/libeve/: base.h  channel.h  channel.private.h  item.h  item.private.h  libeve.h  locks.h  loop.h  loop.private.h  objects.h  objects.private.h  server-channel.h  server-channel.private.h
libeve/src/: channel.c  item.c  loop.c  objects.c  server-channel.c
libeve/src/dymple/: channel.c  loop.c  server-channel.c
libjson/: CMakeLists.txt
libjson/include/libjson/: array.h  array.private.h  base.h  bool.h  bool.private.h  dict.h  dict.private.h  lex.private.h  libjson.h  libjson.private.h  null.h  null.private.h  number.h  number.private.h  objects.h  objects.private.h  string.h  string.private.h
libjson/src/: array.c  bool.c  dict.c  dump.c  lex.c  libjson.c  null.c  number.c  objects.c  parse.c  string.c
libjson/tests/: CMakeLists.txt  test.c  test.json  test.json5
libmath/: CMakeLists.txt
libmath/include/libmath/: base.h  libmath.h
libmath/src/: pow.c
libpci/: CMakeLists.txt
libpci/include/libpci/: base.h  device.private.h  libpci.h  objects.h  objects.private.h
libpci/src/: libpci.c  objects.c
libsimple/: CMakeLists.txt
libsimple/include/libsimple/: base.h  (+7 more)
libsimple/src/: ghmap.c  libsimple.c  mempool.c  ring.c  unicode.c  vector.c
libspooky/: CMakeLists.txt  README.md
libspooky/examples/: hello.spky
libspooky/scripts/: spooky.lark  spookygen.py
libspooky/src/: data.c  deserializer.c  function.c  interface.c  invocation.c  objects.c  proxy.c  serializer.c  structure.c  types.c
libsys/: CMakeLists.txt  exported-symbols.txt
libsys/resources/: core-exported-symbols.txt  offsets.c  support-exported-symbols.txt
libsys/src/: config.c  console.c  counters.c  dlmalloc.c  files.c  format.c  general.c  ghmap.c  handoff.c  locks.c  mempool.c  monitors.c  objects.c  once.c  pages.c  paths.c  processes.c  streams.c  threads.c
libsyscall/: CMakeLists.txt
netman/: CMakeLists.txt
netman/dev/: CMakeLists.txt
netman/resources/: org.anillo.netman.json5
netman/src/: arp.c  device.c  ether.c  icmp.c  ip.c  netman.c  objects.c  packet.c  tcp.c  test.c  udp.c
sysman/: CMakeLists.txt  README.md
sysman/src/: con.spky  conman.c  interface.h  log.spky  logman.c  manager.c  objects.c  privileges.c  sysman.c  test.spky  tinysh.c
usbman/: CMakeLists.txt
usbman/dev/: CMakeLists.txt
usbman/resources/: org.anillo.usbman.json5
usbman/src/: hid.c  objects.c  usb.c  usbman.c
vfsman/: CMakeLists.txt
vfsman/src/: vfs.spky  vfs_handoff.spky
(+560 files in other folders)
